2020.02.20.log
  File "./times.py", line 8
    saves the result to disk.
            ^
SyntaxError: invalid syntax
